# claudio

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Claudio.slnx  DOWNLOAD_PLAN.md  Directory.Build.props  Directory.Packages.props  GEMINI.md  Makefile  README.md  REMOTE_INSTALL_PLAN.md  SKILL.md  config.example.toml  plan.md  scratch.rs  skills-lock.json  todo.md
.github/workflows/: build.yml  desktop.yml  docker.yml  docs.yml  release.yml  test.yml
docker/: Dockerfile  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh
docs/: astro.config.mjs  desktop-test-coverage-checklist.md  package-lock.json  package.json
docs/src/: custom.css
docs/src/components/: Header.astro
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/public/emulator/: index.html
frontend/src/: App.tsx  app.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AccountDialog.tsx  AuthProvider.tsx  DesktopLayout.tsx  DesktopSettingsDialog.tsx  DesktopSettingsProvider.tsx  DesktopSidebar.tsx  DesktopTitleBar.tsx  GameCard.tsx  GuideOverlay.tsx  GuideProvider.tsx  Header.tsx  Logo.tsx  SearchDialog.tsx  TasksPopover.tsx  UninstallDialog.tsx
frontend/src/hooks/: NavigationProvider.tsx  downloadManagerContext.ts  guideTypes.ts  useArrowNav.ts  useAuth.tsx  useDesktop.ts  useDownloadManager.tsx  useDownloadManagerHook.ts  useGamepad.ts  useGuide.tsx  useNavigation.ts  useShortcut.ts  useTheme.ts
frontend/src/pages/: Account.tsx  Admin.tsx  DesktopSetup.tsx  Downloads.tsx  ExternalAuthCallback.tsx  GameDetail.tsx  GameEmulator.tsx  Library.tsx  Login.tsx  Register.tsx
frontend/src/types/: models.ts
frontend/src/utils/: platforms.ts  preferences.ts  sounds.ts
scripts/: build-windows-xwin.sh  bump_version.cjs  check-windows-xwin.sh  generate-icons.sh
src/Claudio.Api/: Claudio.Api.csproj  Program.cs
src/Claudio.Api/Auth/: PasswordHasher.cs  TokenService.cs
src/Claudio.Api/Configuration/: ConfigLoader.cs
src/Claudio.Api/Data/: AppDbContext.cs  ApplicationUser.cs
src/Claudio.Api/Endpoints/: AdminEndpoints.cs  AuthEndpoints.cs  ConnectEndpoints.cs  GameEndpoints.cs  SaveStateEndpoints.cs
src/Claudio.Api/Migrations/: 20260321101325_InitialCreate.Designer.cs  20260321101325_InitialCreate.cs  (+17 more)
src/Claudio.Desktop/: Claudio.Desktop.csproj
src/claudio-api/: Claudio.Api.csproj  Program.cs  packages.lock.json  test_axum_route.rs
src/claudio-api-rs/: Cargo.toml
src/claudio-api-rs/migration/: Cargo.toml
src/claudio-api-rs/migration/src/: lib.rs  m20260414_000001_initial.rs
src/claudio-api-rs/src/: config.rs  db.rs  lib.rs
src/claudio-api-rs/src/auth/: jwt.rs
src/claudio-api-rs/src/entity/: mod.rs  user_external_login.rs
src/claudio-api-rs/src/models/: game.rs  user.rs
src/claudio-api-rs/src/routes/: connect.rs  game_downloads.rs  health.rs  mod.rs
src/claudio-api-rs/src/routes/admin/: games.rs  shared.rs  tasks.rs
src/claudio-api-rs/src/services/: compression.rs  download.rs  mod.rs  ticket.rs
src/claudio-api-rs/src/services/igdb/: error.rs
src/claudio-api-rs/src/services/library_scan/: fs.rs  scan.rs  steamgriddb.rs
src/claudio-api-rs/src/services/oauth/: github.rs  google.rs  mod.rs  oidc.rs  state_store.rs
src/claudio-api-rs/src/util/: archive.rs  emulation.rs  mod.rs
src/claudio-desktop/: AGENTS.md  Cargo.toml  PLAN.md  README.md  build.rs  tauri.conf.json  tauri.windows.conf.json
src/claudio-desktop/capabilities/: default.json
src/claudio-desktop/icons/: icon.icns
src/claudio-desktop/src/: auth.rs  deep_link.rs  http_client.rs  integration_test_api.rs  lib.rs  main.rs  models.rs  protocol.rs  registry.rs  settings.rs  test_support.rs  version.rs  window_material.rs  windows_integration.rs
src/claudio-desktop/src/auth/: network.rs  storage.rs  tests.rs
src/claudio-desktop/src/commands/: games.rs  mod.rs  ping.rs  server_connection.rs
src/claudio-desktop/src/protocol/: tests.rs
src/claudio-desktop/src/services/: game_install.rs  game_runtime.rs  mod.rs
src/claudio-desktop/src/services/game_install/: api.rs  auth_headers.rs  download.rs  download_individual.rs  extract.rs  file_ops.rs  install.rs  installer_cleanup.rs  installer_detect.rs  installer_elevated.rs  installer_innoextract.rs  installer_install.rs  installer_run.rs  mod.rs  paths.rs  progress.rs  state.rs
src/claudio-desktop/src/services/game_install/integration_testing/: download.rs  installer.rs  mod.rs  portable.rs
src/claudio-desktop/src/services/game_install/tests/: core.rs  download.rs  download_fallbacks.rs  download_progress.rs  extract.rs  installer.rs  mod.rs  portable.rs
src/claudio-desktop/src/settings/: tests.rs
src/claudio-desktop/src/windows_integration/: audio.rs  power.rs  registration.rs  shell_dirs.rs  tests.rs
src/claudio-uninstaller/: Cargo.toml  README.md
src/claudio-web/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tests/Claudio.Api.Tests/: AdminEndpointTests.cs  AuthTests.cs  Claudio.Api.Tests.csproj  ClaudioWebApplicationFactory.cs  ConfigLoaderTests.cs  GameEndpointTests.cs  HealthEndpointTests.cs  LibraryScanServiceTests.cs  SaveStateEndpointTests.cs
tests/claudio-api/: AdminEndpointTests.cs  AuthTests.cs  ClaudioWebApplicationFactory.cs  ConfigLoaderTests.cs  GameEndpointTests.cs  LibraryScanServiceTests.cs  MetadataBackgroundServiceTests.cs  PreferencesEndpointTests.cs  TicketStoreTests.cs
tests/claudio-api-rs/: Cargo.toml
tests/claudio-api-rs/src/support/: mod.rs
tests/claudio-api-rs/tests/: admin.rs  auth.rs  games.rs  health.rs  library_scan.rs
tests/claudio-desktop/: Cargo.toml
tests/claudio-desktop/src/support/: archive.rs  fixtures.rs  fs.rs  http.rs  mod.rs  process.rs  windows.rs
tests/claudio-desktop/tests/: auth_flow.rs  commands_flow.rs  download_package_flow.rs  install_cancel_cleanup.rs  install_portable_flow.rs  protocol_flow.rs  runtime_flow.rs  windows_installer_flow.rs  windows_registration_flow.rs  workspace_smoke.rs
(+356 files in other folders)
