[package]
name = "claudio-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Claudio"
path = "src/main.rs"

[lib]
name = "claudio_desktop"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
