[package]
name = "claudio-desktop"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "Claudio"
path = "src/main.rs"

[lib]
name = "claudio_desktop"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
log = "0.4"
dirs = "6"
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"





