[package]
name = "claudio-desktop"
version = "0.1.9"
edition = "2024"

[[bin]]
name = "Claudio"
path = "src/main.rs"

[lib]
name = "claudio_desktop"
path = "src/lib.rs"

[features]
default = []
devtools = ["tauri/devtools"]
integration-tests = []

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
window-vibrancy = "0.6"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
log = "0.4"
dirs = "6"
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "stream",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
url = "2"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"
winreg = "0.52"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Power",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
