[package]
name = "claudio-api-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
claudio-api = { path = "../../src/claudio-api" }
http-body-util = "0.1"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sea-orm = { version = "1", features = ["macros"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
